--- a/assets/mediaquaries.css
+++ b/assets/mediaquaries.css
@@ -1,12 +1,69 @@
-@media(max-width: 570px){
-    .text p{
-        width: 70%;
-        max-width: unset;
 
+@media(max-width: 570px){
+    
+    
+    .navbar-list{
+        position: absolute;
+        top:10px;
+        right: 1%;
+        width: 25%;
+        flex-direction: column;
+        background-color: grey;
+        border: 2px solid var(--electric);
+        border-top: none;
+        border-radius: 0px 0px 15px 15px;
+        padding: 5px;
+        gap: 22px;
+        display: none;
+        
     }
+    .navbar-list a{
+        font-weight: 800;
+    }
+
+    .foto-local{
+        display: none;
+    }
+    .menu{
+        display: flex;
+        order: 2;
+        cursor: pointer;
+        padding: 50px;
+    }
+    .menu img{
+        width: 25px;
+        height: 25px;
+    }
+    #menu-hamburgesa:checked + .navbar-list{
+        display: flex;
+    }
+    .text{
+        width: 100%;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+    }
+    .text h1{
+        width: 90%;
+        max-width: 500px;
+        min-width: unset;
+    }
+
+    .img{
+        display: none;
+    }
+    #about h2{
+        text-align: center;
+        width: 80%;
+    }
+    .container{
+        max-width: 100%;
+    }
+    
     .info-benef{
         width: 100%;
-        height: 950px;
+      height: 100%;
         justify-content: center;
     }
     
@@ -22,12 +79,21 @@
     .catalog-indiv{
         width: 100%;
     }
+    #contact h2{
+        position: relative;
+        right: -10px;
+
+    }
+    .contacto h3{
+        position: relative;
+        right: -20px;
+    }
     .footer-nav{
         flex-direction: column;
         text-align: center;
     }
 }
-@media ( max-width: 992px){
+@media(min-width:570px) and ( max-width: 992px){
     .navbar{
         gap: 10px;
     }
@@ -42,17 +108,24 @@
         border: 2px solid var(--electric);
         border-top: none;
         border-radius: 0px 0px 15px 15px;
-        align-items: flex-start;
-        padding: 45px 30px;
-        gap: 25px;
+        padding: 5px;
+        gap: 22px;
         
         display: none;
         
+    }
+    .navbar-list a{
+        font-weight: 800;
+    }
+
+    .foto-local{
+        display: none;
     }
     .menu{
         display: flex;
         order: 2;
         cursor: pointer;
+        padding: 20px;
     }
     .menu img{
         width: 25px;
